Fix extra-bet-modal properties in SASS, in order to make it more readable

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1073,7 +1073,7 @@ li {
 
 .extra-bet-modal {
   &__container {
-    grid-template-rows: 150px auto 100px !important;
+    grid-template-rows: 150px auto !important;
   }
 
   &__header {
@@ -1572,5 +1572,21 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .extra-bet-modal {
+    &__directions-container {
+      font-size: 1.5rem;
+    }
+
+    &__bet-btn-container {
+      flex-wrap: wrap;
+    }
+  }
+
+  .btn {
+    &-extra-bet-modal__action {
+      min-height: 60px;
+    }
   }
 }
